force-app/main/default/objects/KimbleOne__Deposit__c/KimbleOne__Deposit__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Deposit</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Deposit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>