force-app/main/default/objects/KimbleOne__Deposit__c/fields/KimbleOne__DepositDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DepositDate__c</fullName>
    <label>Deposit Date</label>
    <type>Date</type>
</CustomField>