force-app/main/default/objects/KimbleOne__Deposit__c/fields/KimbleOne__DepositValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DepositValue__c</fullName>
    <label>Deposit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>