force-app/main/default/objects/KimbleOne__Deposit__c/fields/KimbleOne__PurchaseOrderAllocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PurchaseOrderAllocation__c</fullName>
    <label>Purchase Order Allocation</label>
    <referenceTo>KimbleOne__PurchaseOrderAllocation__c</referenceTo>
    <relationshipLabel>Deposits</relationshipLabel>
    <relationshipName>Deposits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>