force-app/main/default/objects/KimbleOne__Deposit__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__DepositValue__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__DeliveryElement__c</columns>
    <columns>KimbleOne__PurchaseOrderAllocation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>